# World-Model-RL

./: .gitignore  .gitmodules  IDEA.md  README.md  bootstrap.sh  pyproject.toml  run_task57.sh  setup.py
VLAC/: .gitignore  README.md  pyproject.toml
VLAC/evo_vlac/examples/: data_filtering_example.py  get_ref_video_libero.py  image_pair-wise_critic_example.py  video_trajectory_critic_example.py  vla_example.py
VLAC/evo_vlac/utils/: model_utils.py
docs/: 2DGS_PANORAMA_DOCUMENTATION.md  CUSTOM.md
dreamer_v3/: UPSTREAM_VERSION  __init__.py  agent.py  libero_env.py  networks.py  replay.py  utils.py
examples/: debug_draw_k_decay.py  launch_train_double_q.py  launch_train_dreamerv3.py  launch_train_sim.py  launch_train_tdmpc2.py  train_double_q.py  train_dreamerv3.py  train_sim.py  train_tdmpc2.py  train_utils_double_q.py  train_utils_sim.py
examples/latent_policy_viz/: __init__.py  canonical_states.py  evolution_plotter.py  latent_tracker.py  proprioceptive_plotter.py  proprioceptive_tracker.py
examples/scripts/: run_dreamerv3_libero.sh  run_libero.sh  run_libero_double_q.sh  run_tdmpc2_libero.sh
jaxrl2/agents/pixel_sac/: __init__.py  twin_pixel_sac_learner.py
jaxrl2/utils/: wandb_logger.py
real_to_sim/: REAL-TO-SIM.md  collect_human_demo.py  fp_objects.py  generate_mask.py
real_to_sim/sample_data/: camera_to_robot.npy
real_to_sim/sample_data/mug_on_holder/: cam_K.txt
scripts/: LIBERO_METADATA_MAPPING.md  build.sh  build_panorama_sparse_from_sim_depth.py  collect_sim_demo.py  image_collect.py  install_dsrl.sh  metadata.py  test.sh  test_env.py  track.sh
simulation/ManiSkill/mani_skill/envs/tasks/xsim_envs/: __init__.py  libero_spatial.py
simulation/ManiSkill/mani_skill/envs/tasks/xsim_envs/render/: libero_spatial_render.py
simulation/scripts/: data_generation_rgb.py
tdmpc2/: __init__.py  agent.py  config_libero.yaml
tdmpc2/common/: parser.py
tdmpc2/data/: replay_buffer.py
tdmpc2/envs/: __init__.py  libero.py
tdmpc2/networks/: encoder.py  world_model.py
tdmpc2/outputs/2026-04-13/18-09-00/.hydra/: config.yaml  hydra.yaml  overrides.yaml
tdmpc2/outputs/2026-04-13/18-10-03/.hydra/: hydra.yaml
tdmpc2/utils/: math.py  wandb_logger.py
