[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tdmpc2-libero"
version = "0.1.0"
description = "TD-MPC2 baseline for LIBERO benchmark"
requires-python = "==3.10.*"
dependencies = [
    # PyTorch stack (CUDA 12.8)
    "torch==2.11.0",
    "torchvision==0.26.0",
    # RL environments
    "libero",
    "robosuite==1.4.0",
    "gym==0.25.2",
    "gym-notices==0.0.8",
    "gymnasium==0.29.1",
    "bddl==3.5.0",
    "mujoco>=3.1.4",
    # Data / numerics
    "numpy==1.26.4",
    "scipy>=1.10.0",
    "h5py>=3.7.0",
    # Image / video
    "opencv-python>=4.6.0",
    "pillow>=9.0.0",
    "imageio>=2.22.0",
    # Logging
    "wandb>=0.16.0",
    # Utilities
    "einops>=0.6.0",
    "easydict>=1.9",
    "tqdm>=4.64.0",
    "termcolor>=3.3.0",
    "cloudpickle>=3.1.2",
    "matplotlib>=3.10.8",
]

[tool.uv]
override-dependencies = ["mujoco>=3.1.4"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
libero = { path = "../World-Model-RL-env/third_party/LIBERO", editable = true }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.setuptools.packages.find]
include = ["tdmpc2*", "examples*"]
