[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evo-vlac"
version = "1.0.0"
description = "VLAC: A Vision-Language-Action-Critic Model for Robotic Real-World Reinforcement Learning"
readme = "README.md"
authors = [
    {name = "zhangqi", email = "zhangqi1@pjlab.org"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
license = { file = "LICENSE" }
requires-python = ">=3.9,<=3.11"
dependencies = [
"ms-swift==3.3",
"transformers>=4.51.0",
"peft>=0.15.2",
"opencv-python",
"loguru",
"timm",
"torch==2.7.1",
"torchvision",
"flash-attn"
]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.urls]
Homepage = "https://github.com/7-Z-7/VLAC"
Repository = "https://github.com/7-Z-7/VLAC"

[tool.setuptools.packages.find]
include = ["evo_vlac*"]
